<?xml version="1.0" encoding="utf-8"?><!--
  FILE          : strings.xml
  AUTHORS       : Mher Keshishian
  FIRST VERSION : January 28th
  PURPOSE       : Locale strings.
-->
<resources>
    <string name="app_name">Trip Planner</string>
    <string name="select_destination">Choose Your Paradise</string>
    <string name="back">Back</string>
    <string name="confirm">Confirm</string>
    <string name="welcome_message">Embark on Your Journey</string>
    <string name="plan_trip_text">Let`s take a trip with us</string>
    <string name="passengers_label">Traveller:</string>
    <string name="start_date_label">Start Date</string>
    <string name="end_date_label">End Date</string>
    <string name="start_date_check_label">Start Date:</string>
    <string name="end_date_check_label">End Date:</string>
    <string name="next_button">Next</string>
    <string name="exit_button">Exit</string>
    <string name="trip_itinerary_title">Journey Preview</string>
    <string name="destination_label">Destination:</string>
    <string name="duration_label">Duration of Stay:</string>
    <string name="traveler_name_label">Traveler\'s Name:</string>
    <string name="enter_traveler_name_hint">Enter your name</string>
    <string name="number_of_passengers_label">Passengers:</string>
    <string name="finish_button">Finish</string>
    <string name="select_date">Select your Start and End dates</string>
    <string name="ending_on">ending on</string>
    <string name="start_date_row">Start Date:</string>
    <string name="end_date_row">End Date:</string>
    <string name="price">Price:</string>
    <string name="niagara_label">Niagara</string>
    <string name="niagara_description">Niagara Falls view</string>
    <string name="miami_label">Miami</string>
    <string name="miami_description">Miami city skyline</string>
    <string name="las_vegas_label">Las Vegas</string>
    <string name="las_vegas_description">Las Vegas city skyline</string>
    <string name="Insurance">Do you need Insurance?</string>
    <string name="welcome_app_name">Welcome To Trip Planner</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_here">Already have an account? Login here</string>
    <string name="register_here">Not registered? Register here</string>
    <string name="password_field">  Password</string>
    <string name="username_field">  Username</string>
    <string name="confirm_password">  Confirm Password</string>
    <string name="check">Check</string>
    <string name="check_other_deals_on_expedia">Check other deals on Expedia</string>
    <string name="addToYourCalendar">Add schedule to your calendar</string>
    <string name="_15_off">15% off</string>
    <string name="title">Title</string>
    <string name="detail_price">Price</string>
    <string name="duration_of_trip_0_days">Duration of Trip: 0 Days</string>
    <string name="description">Description</string>
    <string name="includes_taxes_and_fees"><![CDATA[includes taxes & fees]]></string>
    <string name="destination">Destination: N/A</string>
    <string name="duration">Duration of Stay: N/A</string>
    <string name="end_date">End Date:</string>
    <string name="add_to_calendar">Add to Calendar</string>



</resources>