<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Title -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="49dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/travel_icon_hdpi" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/TitleText" />
    </LinearLayout>

    <!-- Destination -->
    <TextView
        android:id="@+id/widgetDestination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/destination"
        style="@style/InfoText" />

    <!-- Start Date -->
    <TextView
        android:id="@+id/widgetDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        style="@style/InfoText" />


</LinearLayout>
