<?xml version="1.0" encoding="utf-8"?>
<!--
  FILE          : activity_destination_selection.xml
  AUTHORS       : Mher Keshishian
  FIRST VERSION : January 27th
  PURPOSE       : Choose destination activity layout.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_destination_selection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/page1"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">


    <TextView
        android:id="@+id/instructionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_destination"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        style="@style/TitleText"/>


    <TextView
        android:id="@+id/dealsTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_15_off"
        android:textColor="#ffffff"
        android:background="@drawable/red_rounded_background"
        android:layout_marginStart="10dp"
        android:padding="5dp"
        android:layout_alignBaseline="@id/countdownTextView"/>

    <TextView
        android:id="@+id/countdownTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_below="@id/instructionText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/dealsTag"
        android:layout_marginStart="10dp"
        style="@style/InfoText"/>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerView"
        android:layout_marginTop="10dp"
        android:scrollbars="vertical"
        android:layout_below="@id/countdownTextView"/>


    <Button
        android:id="@+id/backButton"
        style="@style/MyButtonStyle"
        android:text="@string/back"
        android:background="@drawable/my_button_gray"
        android:layout_below="@id/instructionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="580sp"/>


</RelativeLayout>